use proper var name

--- a/db.env.example
+++ b/db.env.example
@@ -1,6 +1,6 @@
 POSTGRES_PASSWORD=some_secret_password
 POSTGRES_DB=obp_institutions
 POSTGRES_USER=obp
-IDENTIFIERSDB_PASS=some_secret_password
-IDENTIFIERSDB_DB=obp_institutions
-IDENTIFIERSDB_USER=obp
+INSTITUTIONDB_PASS=some_secret_password
+INSTITUTIONDB_DB=obp_institutions
+INSTITUTIONDB_USER=obp
